# cpp-allocator

./: .gitignore  CMakeLists.txt  LICENSE  README.md
app/: app.cpp
include/: allocator.h
src/: allocator.cpp
